--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,26 @@
-  <div class="nav">
-    <%= link_to "記事を表示", "", class: "nav--left" %>
-    <%= link_to "投稿を表示", "", class: "nav--right" %>
+<div class="nav">
+  <%= link_to "記事を表示", "", class: "nav--left" %>
+  <%= link_to "投稿を表示", "", class: "nav--right" %>
+</div>
+<% @post.each do |post| %>
+  <div class="content">
+    <div class="content__left">
+      <div class="content__left--image">
+        <%= image_tag post.image.variant(resize: '55x55') if post.image.present? %>
+      </div>
+    </div>
+    <div class="content__right">
+      <div class="content__right__top">
+        <%= link_to post.title, "", class: "content__right__top--title" %>
+      </div>
+      <div class="content__right__bottom">
+        <div class="content__right__bottom--userName">
+          <%= link_to post.user.nickname, "", class: "content__right__bottom--userName--btn" %>
+        </div>
+        <div class="content__right__bottom--date">
+          <%= post.created_at %>
+        </div>
+      </div>
+    </div>
   </div>
+<% end %>
