--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -17,6 +17,9 @@
         <div class="content__right__bottom--userName">
           <%= link_to post.user.nickname, "", class: "content__right__bottom--userName--btn" %>
         </div>
+        <div class="content__right__bottom--category_id">
+          <%= link_to post.category.name%>
+        </div>
         <div class="content__right__bottom--date">
           <%= post.created_at %>
         </div>
