--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -11,7 +11,7 @@
     </div>
     <div class="content__right">
       <div class="content__right__top">
-        <%= link_to post.title, "", class: "content__right__top--title" %>
+        <%= link_to post.title, post_path(post), class: "content__right__top--title" %>
       </div>
       <div class="content__right__bottom">
         <div class="content__right__bottom--userName">
