--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <body>
   <header class="header">
     <div class="header__title">
-      <%= link_to "免疫力ブログ", "" , class: "header__title--text" %>
+      <%= link_to "免疫力ブログ", root_path , class: "header__title--text" %>
     </div>
     <div class="header__right">
       <% if user_signed_in? %>
