--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -15,7 +15,7 @@
       </div>
       <div class="content__right__bottom">
         <div class="content__right__bottom--userName">
-          <%= link_to post.user.nickname, "", class: "content__right__bottom--userName--btn" %>
+          <%= link_to post.user.nickname, user_path(post.user.id), class: "content__right__bottom--userName--btn" %>
         </div>
         <div class="content__right__bottom--category_id">
           <%= link_to post.category.name%>
