最低限のフロント実装

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class="contents row">
-  <p><%= @nickname %>さんの投稿一覧</p>
+  <p><%= @user.nickname %>さんの投稿一覧</p>
   <%# 記事を部分テンプレートにしたら実装する %>
   <%# <% @posts.each do |tweet| %>
     <%# <%= render partial: "posts/post", locals: { post: post } %>
