--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -21,7 +21,7 @@
   <div class="container">
     <% if current_user %>
       <%= form_with(model: [@post, @comment], local: true) do |form| %>
-        <%= form.text_area :text, placeholder: "コメントする", rows: "2" %>
+        <%= form.text_area :content, placeholder: "コメントする", rows: "2" %>
         <%= form.submit "SEND" %>
       <% end %>
     <% else %>
@@ -33,7 +33,7 @@
         <% @comments.each do |comment| %>
           <p>
             <strong><%= link_to comment.user.nickname, "/users/#{comment.user_id}" %>：</strong>
-            <%= comment.text %>
+            <%= comment.content %>
           </p>
         <% end %>
       <% end %>
