--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -18,24 +18,24 @@
 <div class="postText">
   <%= simple_format @post.content %>
 </div>
-  <div class="container">
-    <% if current_user %>
-      <%= form_with(model: [@post, @comment], local: true) do |form| %>
-        <%= form.text_area :content, placeholder: "コメントする", rows: "2" %>
-        <%= form.submit "SEND" %>
-      <% end %>
-    <% else %>
-      <strong><p>※※※ コメントの投稿には新規登録/ログインが必要です ※※※</p></strong>
+<div>
+  <% if user_signed_in? %>
+    <%= form_with model: [@post, @comment], local: true do |f|%>
+      <div class="field">
+        <%= f.label :content, "コメント" %><br />
+        <%= f.text_field :content %>
+      </div>
+      <div class="actions">
+        <%= f.submit "送信する", class: :form__btn  %>
+      </div>
+    <% end %> 
+  <% end %>
+  <ul class="comments_lists">
+    <% @comments.each do |comment| %>
+      <li class="comments_list">
+        <%= comment.content %>
+        <%= link_to comment.user.nickname, user_path(comment.user_id), class: :comment_user %>
+      </li>
     <% end %>
-    <div class="comments">
-      <h4>＜コメント一覧＞</h4>
-      <% if @comments %>
-        <% @comments.each do |comment| %>
-          <p>
-            <strong><%= link_to comment.user.nickname, "/users/#{comment.user_id}" %>：</strong>
-            <%= comment.content %>
-          </p>
-        <% end %>
-      <% end %>
-    </div>
-  </div>
+  </ul>
+</div>
