--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -35,3 +35,12 @@
   </li>
 <% end %>
 
+<%= form_with url: "/posts", method: :post, local: true do |form| %>
+  <div class="field">
+    <%= form.label :text, "投稿する" %><br />
+    <%= form.text_field :text %>
+  </div>
+  <div class="actions">
+    <%= form.submit "送信する", class: :form__btn  %>
+  </div>
+<% end %> 
