フロント部分の設定

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <div class="nav">
   <%= link_to "記事を表示", "", class: "nav--left" %>
-  <%= link_to "投稿を表示", chats_path, class: "nav--right" %>
+  <%= link_to "掲示板", chats_path, class: "nav--right" %>
 </div>
 <% @post.each do |post| %>
   <div class="content">
