--- a/app/assets/stylesheets/chats.scss
+++ b/app/assets/stylesheets/chats.scss
@@ -1,3 +1,12 @@
-// Place all the styles related to the chats controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.form-area {
+  height: 70px;
+  width: 100%;
+  bottom: 0;
+  text-align: center;
+}
+
+.chat {
+  background-color: #efefef;
+  margin-bottom: 8px;
+  padding: 8px;
+}
