--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -1,53 +1,42 @@
-<h1>フリーチャット</h1>
-<%= form_with url: "/chats", method: :post,id: "form" do |f| %>
-  <div class="field">
-    <%= f.text_field :text, id: "text" %>
-  </div>
-  <div class="actions">
-    <%= f.submit "送信する", class: :form__btn, id: "submit" %>
-  </div>
-<% end %>
-
-<div id="list">
-</div>
-
-<% if @chats.present? %>
-  <% @chats.each do |chat| %>
-  <li>
-    <div>
-      <span>
-        <%= link_to chat.user.nickname, user_path(chat.user.id) %>
-      </span>
-      <span>
-        <%= chat.created_at %>
-      </span>
-      <% if current_user.id == chat.user.id %>
-        <span>
-          <%= link_to '削除', chat_path(chat.id), method: :delete %>
-        </span>
+<body>
+  <div class="contents">
+    <div class="form-area">
+      <%= form_with url: "/chats", method: :post,id: "form" do |f| %>
+        <div class="field">
+          <%= f.text_field :text, id: "text" %>
+        </div>
+        <div class="actions">
+          <%= f.submit "投稿する", class: :form__btn, id: "submit" %>
+        </div>
       <% end %>
-      <div>
-        <span>
-        <%= chat.text %>
-        </span>
-      </div>
     </div>
-  </li>
-  <% end %>
-<% else %>
-  <li>
-    <div>
-      <h3>
+    <% if @chats.present? %>
+      <% @chats.each do |chat| %>
+        <div class="chat">
+          <%= link_to chat.user.nickname, user_path(chat.user.id) %>
+          <span>
+            <%= chat.created_at %>
+          </span>
+          <% if current_user.id == chat.user.id %>
+            <span>
+              <%= link_to '削除', chat_path(chat.id), method: :delete %>
+            </span>
+          <% end %>
+          <div>
+            <%= chat.text %>
+          </div>
+        </div>
+      <% end %>
+    <% else %>
+      <div>
         <%= link_to 'ユーザーネーム', '#' %>
-      </h3>
-      <span>
-        投稿日時
-      </span>
-      <div>
         <span>
-        本文を表示
+          投稿日時
         </span>
+        <div>
+          本文を表示
+        </div>
       </div>
-    </div>
-  </li>
-<% end %>
+    <% end %>
+  </div>
+</body>
