ヘッダーの部分テンプレート化

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,4 @@
+<%= render "shared/header" %>
 <div class="nav">
   <%= link_to "記事を表示", "", class: "nav--left" %>
   <%= link_to "掲示板", chats_path, class: "nav--right" %>
