サイドバーのフロント実装

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="contents row">
   <p><%= @user.nickname %>さんの投稿一覧</p>
   <%# 記事を部分テンプレートにしたら実装する %>
-  <%# <% @posts.each do |tweet| %>
+  <%# <% @posts.each do |post| %>
     <%# <%= render partial: "posts/post", locals: { post: post } %>
   <%# <% end %>
 </div>
