--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,30 +1,11 @@
-<%= render "shared/header" %>
-<div class="nav">
-  <%= link_to "記事を表示", "", class: "nav--left" %>
-  <%= link_to "掲示板", chats_path, class: "nav--right" %>
-</div>
-<% @post.each do |post| %>
-  <div class="content">
-    <div class="content__left">
-      <div class="content__left--image">
-        <%= image_tag post.image.variant(resize: '55x55') if post.image.present? %>
-      </div>
-    </div>
-    <div class="content__right">
-      <div class="content__right__top">
-        <%= link_to post.title, post_path(post), class: "content__right__top--title" %>
-      </div>
-      <div class="content__right__bottom">
-        <div class="content__right__bottom--userName">
-          <%= link_to post.user.nickname, user_path(post.user.id), class: "content__right__bottom--userName--btn" %>
-        </div>
-        <div class="content__right__bottom--category_id">
-          <%= link_to post.category.name%>
-        </div>
-        <div class="content__right__bottom--date">
-          <%= post.created_at %>
-        </div>
-      </div>
-    </div>
+<div class ="wrapper">
+  <div class ="side-bar">
+    <%= render "shared/side-bar" %>
   </div>
-<% end %>
+  <div class="post">
+    <%= link_to "新規投稿", new_post_path %>
+    <% @post.each do |post| %>
+      <%= render partial: "posts/post", locals: { post: post } %>
+    <% end %>
+  </div>
+</div>
