詳細ページの微調整

--- a/app/assets/stylesheets/posts/show.scss
+++ b/app/assets/stylesheets/posts/show.scss
@@ -1,6 +1,8 @@
 .post {
   &__show{
     text-align: center;
+    background-color: #efefef;
+    margin: 10px;
   }
   &__detail {
     padding: 10px;
