ユーザーログインページのフロント実装

--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -9,7 +9,7 @@
           <div class="field">
             <%= f.text_field :text, id: "text" %>
           </div>
-          <div class="actions">
+          <div class="field">
             <%= f.submit "投稿する", class: :form__btn, id: "submit" %>
           </div>
         <% end %>
