--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class="user">
-  <header class="user__show__header">
+  <header class="user__header">
     <%= link_to "トップページ", root_path, class:"form__btn" %>
   </header>
   <h2>
