--- a/app/assets/stylesheets/users/show.scss
+++ b/app/assets/stylesheets/users/show.scss
@@ -1,7 +1,7 @@
 .user {
   text-align: center;
 
-  &__show__header {
+  &__header {
     height: 65px;
     background-color: #55c500;
   }
@@ -14,4 +14,28 @@
     background-color: #FAFAFA;
     padding: 10px;
   }
+}
+
+.field {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  padding-top: 20px;
+}
+
+.input-default {
+  width: 100%;
+  margin-top: 5px;
+  height: 48px;
+  padding: 10px 16px 8px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  background: #fff;
+  font-size: 16px;
+  resize: none;
+}
+
+.input-birth-wrap {
+  display: flex;
 }
