--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,31 +1,36 @@
-<%= form_with model: @user, url: user_registration_path, class: 'registration-main', local: true do |f| %>
-  <div class="form">
-    <div class="form-heading">
+<div class ="user">
+  <header class ="user__header">
+    <%= link_to "トップページ", root_path, class:"form__btn" %>
+  </header>
+  <div class ="user__form">
+    <div class ="user__form__heading">
       <h2> ユーザー新規登録 </h2>
     </div>
-    <div class="form-group">
-      <div class="field">
-        <%= f.label :email, "メールアドレス" %><br />
-          <%= f.email_field :email, autofocus: true, autocomplete: "email", autofocus: true %>
-      </div>
-      <div class="field">
-        <%= f.label :password, "パスワード（英数字6文字以上）" %><br />
-          <%= f.password_field :password, autocomplete: "new-password" %>
-      </div>
-      <div class="field">
-        <%= f.label :password_confirmation, "パスワード再入力" %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-      </div>
-      <div class="field">
-        <%= f.label :nickname, "ユーザー名(最大6文字)" %><br />
-          <%= f.text_area :nickname, class:"input-default", id:"nickname", placeholder:"例) furima太郎", maxlength:"6" %>
-      </div>
-      <div class="field">
-    <div class='form-text-wrap'>
-      <label class="form-text">生年月日</label>
-    </div>
-    <div class='input-birth-wrap'>
-      <%= raw sprintf(
+    <div class="user__new">
+      <%= form_with model: @user, url: user_registration_path, class: 'registration-main', local: true do |f| %>
+        <div class="form-group">
+          <div class="field">
+            <%= f.label :email, "メールアドレス" %><br />
+            <%= f.email_field :email, class:"input-default", autofocus: true, autocomplete: "email", autofocus: true %>
+          </div>
+          <div class="field">
+            <%= f.label :password, "パスワード（英数字6文字以上）" %><br />
+            <%= f.password_field :password, class:"input-default", autocomplete: "new-password" %>
+          </div>
+          <div class="field">
+            <%= f.label :password_confirmation, "パスワード再入力" %><br />
+            <%= f.password_field :password_confirmation, class:"input-default", autocomplete: "new-password" %>
+          </div>
+          <div class="field">
+            <%= f.label :nickname, "ユーザー名(最大6文字)" %><br />
+            <%= f.text_area :nickname, class:"input-default", id:"nickname", placeholder:"例) furima太郎", maxlength:"6" %>
+          </div>
+          <div class="field">
+            <div class='form-text-wrap'>
+              <label class="form-text">生年月日</label>
+            </div>
+            <div class='input-birth-wrap'>
+              <%= raw sprintf(
                   f.date_select(
                     :birth_date,
                     class:'select-birth',
@@ -36,10 +41,13 @@
                     end_year: (Time.now.year - 5),
                     date_separator: '%s'),
                   "<p> 年 </p>", "<p> 月 </p>") + "<p> 日 </p>" %>
-    </div>
-      <div class="actions">
-        <%= f.submit "新規登録", class: :form__btn  %>
-      </div>
+            </div>
+          </div>
+          <div class="field">
+            <%= f.submit "新規登録", class: :form__btn  %>
+          </div>
+        </div>
+      <% end %>
     </div>
   </div>
-  <% end %>
+</div>
