--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,7 +1,11 @@
 <div class="card">
   <div class="card__body">
     <p>
-      <%= image_tag post.image, class:"card__img" if post.image.present? %>
+      <% if post.image.present? %>
+        <%= image_tag post.image, class:"card__img" %>
+      <% else %>
+        <%= image_tag "https://lh4.googleusercontent.com/proxy/XNaK4AZoo-Sk1tQc18XR9eIe9ZLAoshLnF02KFTIijP7F683JOYYn0ZaVPVdiWUc_UrVrcVFauSwz7kN4mdQk4a7bjrIj4IgxQ=s0-d", class:"card__img" %>
+      <% end %>
     </p>
     <p>
       <%= link_to post.title, post_path(post), class:"card__title" %>
