--- a/app/views/shared/_side-bar.html.erb
+++ b/app/views/shared/_side-bar.html.erb
@@ -1,8 +1,8 @@
 <div class="side-bar">
   <ul class="side-bar__nav">
-    <li>
-      <%= link_to "トップページ", "#" , class: "side-bar__nav--btn" %>
-    </li>
+    <%# <li> %>
+      <%# <%= link_to "トップページ", "#" , class: "side-bar__nav--btn" %> %>
+    <%# </li> %>
     <% if user_signed_in? %>
       <li>
         <%= link_to "マイページ", user_path(current_user.id), class: "side-bar__nav--btn" %>
