ゲストログイン機能の実装

--- a/app/views/shared/_side-bar.html.erb
+++ b/app/views/shared/_side-bar.html.erb
@@ -1,7 +1,7 @@
 <div class="side-bar">
   <ul class="side-bar__nav">
     <%# <li> %>
-      <%# <%= link_to "トップページ", "#" , class: "side-bar__nav--btn" %> %>
+      <%# <%= link_to "トップページ", "#" , class: "side-bar__nav--btn" %>
     <%# </li> %>
     <% if user_signed_in? %>
       <li>
